# MyBot4QQ

./: README.md  config.yaml  echowing-mybot4qq.service  main.py  mybot4qq.service  pyproject.toml  qqbot.yaml
common/: __init__.py  config.py
etc/: qqbot.yaml
proto/: qqbot.proto
service/: __init__.py  qqbot.py
src/common/: config.py  consul.py
src/qqbot/: qqbot_pb2.py  qqbot_pb2_grpc.py  sender.py  server.py  service.py
tests/: client.py
